--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
@@ -5,13 +5,14 @@
 
 	<div class="col-sm-12" style="text-align: center;">
 		<div class="col-sm-12">
-			<h3>Un servicio de motoristas...</h3>
+			<!-- 			<h3>Un servicio de motoristas...</h3> -->
 		</div>
 		<form class="form-group  "
 			data-th-action="@{/motostiburon/presupuesto/consultar}" method="POST">
 
 
 			<div class="hidden-xs col-sm-6 suzuki-background"></div>
+			<!-- 			<div class="hidden-xs col-sm-6 "></div> -->
 
 			<div class="col-sm-6" style="text-align: left;">
 				<h4 style="color: #999999">
@@ -52,11 +53,11 @@
 			</div>
 
 		</form>
-		
+
 
 
 		<div class="col-sm-12">
-			<h3>...para motoristas</h3>
+			<!-- 			<h3>...para motoristas</h3> -->
 		</div>
 
 		<script type="text/javascript">
