--- a/Software/Codigo/src/main/resources/templates/index.html
+++ b/Software/Codigo/src/main/resources/templates/index.html
@@ -43,14 +43,20 @@
 <!-- Hoja de estilo fuentes google -->
 <link href="/font/material-design-icons/material-icons.css"
 	rel="stylesheet" />
-	
-	
+
+
 <!-- 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,300,700" media="screen, print"/> -->
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"  media="screen, print"/> 
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+	rel="stylesheet" media="screen, print" />
+
+
+<script data-th-src="@{/js/custom-date-picker.js}"></script>
+<!-- <script data-th-src="@{/js/html2canvas.js}"></script> -->
 
 </head>
 
-<body onscroll="stickNavBar()" style="font-family: 'Source Sans Pro', sans-serif; font-size:18px;">
+<body onscroll="stickNavBar()"
+	style="font-family: 'Source Sans Pro', sans-serif; font-size: 18px;">
 
 	<div id="imageSlider" class="col-sm-12 empty"
 		style="background-color: black; min-height: 530px; -webkit-transition: background-image 0.2s ease-in-out; transition: background-image 0.2s ease-in-out;">
@@ -92,7 +98,7 @@
 			</button>
 			<a class="navbar-brand active" href="/motostiburon/home"> <span
 				class="glyphicon glyphicon-home"></span>
-				
+
 			</a> <img class="visible-xs motosTiburonLetras" alt="Motos tiburón"
 				data-th-src="@{/images/motos_tiburon_letras.png}"
 				style="height: 120px; position: relative; top: -30px; float: right" />
@@ -101,7 +107,7 @@
 
 		</div>
 
-		<div class="collapse navbar-collapse" id="collapseMenu" >
+		<div class="collapse navbar-collapse" id="collapseMenu">
 			<ul class="nav navbar-nav" style="margin: 0px; border: 0px">
 				<li><a href="/motostiburon/empresa">Empresa</a></li>
 				<li><a href="/motostiburon/servicios">Servicios</a></li>
@@ -254,12 +260,12 @@
 			if (window.pageYOffset >= sticky) {
 				navbar.classList.add("navbar-fixed-top")
 				bodyContent.style.paddingTop = "50px";
-				$( ".motosTiburonLetras" ).css('top',"-25px");
+				$(".motosTiburonLetras").css('top', "-25px");
 
 			} else {
 				navbar.classList.remove("navbar-fixed-top");
 				bodyContent.style.paddingTop = "0px";
-				$( ".motosTiburonLetras" ).css('top',"-30px");
+				$(".motosTiburonLetras").css('top', "-30px");
 
 			}
 		}
