--- a/Software/Codigo/src/main/resources/templates/index.html
+++ b/Software/Codigo/src/main/resources/templates/index.html
@@ -51,7 +51,6 @@
 
 
 <script data-th-src="@{/js/custom-date-picker.js}"></script>
-<!-- <script data-th-src="@{/js/html2canvas.js}"></script> -->
 
 </head>
 
@@ -112,7 +111,7 @@
 				<li><a href="/motostiburon/empresa">Empresa</a></li>
 				<li><a href="/motostiburon/servicios">Servicios</a></li>
 				<li><a href="/motostiburon/clientes">Clientes</a></li>
-				<li><a href="#">Contacto</a></li>
+				<li><a href="/motostiburon/contacto">Contacto</a></li>
 				<li><a href="/motostiburon/presupuesto">Presupuesto</a></li>
 			</ul>
 
