--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/inicial.html
@@ -1,18 +1,9 @@
 <div data-th-fragment="fragment">
-
-	<!-- azul #345589 -->
-
-
 	<div class="col-sm-12" style="text-align: center;">
-		<div class="col-sm-12">
-			<!-- 			<h3>Un servicio de motoristas...</h3> -->
-		</div>
+		<div class="col-sm-12"></div>
 		<form class="form-group  "
 			data-th-action="@{/motostiburon/presupuesto/consultar}" method="POST">
-
-
 			<div class="hidden-xs col-sm-6 suzuki-background"></div>
-			<!-- 			<div class="hidden-xs col-sm-6 "></div> -->
 
 			<div class="col-sm-6" style="text-align: left;">
 				<h4 style="color: #999999">
@@ -24,15 +15,14 @@
 			<div class="col-sm-6"></div>
 
 			<div class="form-group col-sm-4" style="text-align: left;">
-
 				<input placeholder="Lugar de recogida" class="form-control col-sm-5"
 					id="origen" name="origen" type="text" />
 			</div>
 
 			<div class="form-group col-sm-2" style="text-align: left;">
-				<input placeholder="Fecha de entrega"
-					class="form-control col-sm-5 datepicker" id="fechaEntrega"
-					name="fechaEntrega" type="text" onfocus="blur();" />
+				<input placeholder="Fecha de recogida"
+					class="form-control col-sm-5 datepicker" id="fechaRecogida"
+					name="fechaRecogida" type="text" onfocus="blur();" />
 			</div>
 
 			<div class="col-sm-6"></div>
@@ -42,9 +32,9 @@
 			</div>
 
 			<div class="form-group col-sm-2" style="text-align: left;">
-				<input placeholder="Fecha de recogida"
-					class="form-control col-sm-5 datepicker" id="fechaRecogida"
-					name="fechaRecogida" type="text" onfocus="blur();" />
+				<input placeholder="Fecha de entrega"
+					class="form-control col-sm-5 datepicker" id="fechaEntrega"
+					name="fechaEntrega" type="text" onfocus="blur();" />
 			</div>
 
 			<div class="col-sm-6"></div>
@@ -56,9 +46,7 @@
 
 
 
-		<div class="col-sm-12">
-			<!-- 			<h3>...para motoristas</h3> -->
-		</div>
+		<div class="col-sm-12"></div>
 
 		<script type="text/javascript">
 			
