--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/contacto.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/contacto.html
@@ -11,7 +11,8 @@
 			</div>
 			
 			<div class="form-group col-sm-12">
-				<textarea cols="50" rows="10" class="form-control" name="mensaje" type="text"
+				<textarea cols="50" rows="10" class="form-control" name="mensaje"
+					
 					placeholder="¡Háganos llegar su consulta lo antes posible!"></textarea>
 			</div>
 			<div class="form-group col-sm-12">
