--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/clientes.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/clientes.html
@@ -10,7 +10,7 @@
 
 		<div class="col-sm-4" data-th-each="logo : ${listadoLogosClientes}" style="height:200px;">
 			<img data-th-alt="${logo}" data-th-src="@{/images/clientes/}+${logo}"
-				class="cover" style="height: 150px;" />
+				class="cover" style="height: 150px; max-width:300px;" />
 		</div>
 
 	</div>
