--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/empresa.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/empresa.html
@@ -17,15 +17,26 @@
 				clientes.</p>
 		</div>
 		<div class="col-sm-6">
-			<img alt="Furgonentas motos tiburón 1"
-				data-th-src="@{/images/empresa/furgonetas01.jpg}" />
+			<img class="hidden-sm hidden-xs" alt="Furgonentas motos tiburón 1"
+				data-th-src="@{/images/empresa/furgonetas01.jpg}"
+				style="max-height: 350px; min-width: 350px;" /> 
+				
+				<img
+				class="visible-sm visible-xs" alt="Furgonentas motos tiburón 1"
+				data-th-src="@{/images/empresa/furgonetas01.jpg}"
+				style="max-height: 240px; min-width: 240px;" />
 		</div>
 
 	</div>
-	<div class="col-sm-12" style="text-align: center; ">
+	<div class="col-sm-12" style="text-align: center;">
 		<div class="col-sm-6">
-			<img alt="Furgonentas motos tiburón 2"
-				data-th-src="@{/images/empresa/furgonetas02.jpg}" />
+			<img class="hidden-sm hidden-xs" alt="Furgonentas motos tiburón 2"
+				data-th-src="@{/images/empresa/furgonetas02.jpg}"
+				style="max-height: 350px; min-width: 350px;" />
+				
+				<img class="visible-sm visible-xs"  alt="Furgonentas motos tiburón 2"
+				data-th-src="@{/images/empresa/furgonetas02.jpg}"
+				style="max-height:  240px; min-width: 240px;" />
 		</div>
 
 		<div class="col-sm-6 text-justify">
