--- a/Software/Codigo/src/main/resources/templates/views/motostiburon/home/servicios.html
+++ b/Software/Codigo/src/main/resources/templates/views/motostiburon/home/servicios.html
@@ -20,14 +20,14 @@
 
 	<div class="col-sm-4">
 		<img alt="Servicios motos tiburón 1"
-			data-th-src="@{/images/servicios/servicios01.jpg}" />
+			data-th-src="@{/images/servicios/servicios01.jpg}" style="max-height:350px; max-width:350px;" />
 	</div>
 	<div class="col-sm-4">
 		<img alt="Servicios motos tiburón 2"
-			data-th-src="@{/images/servicios/servicios02.jpg}" />
+			data-th-src="@{/images/servicios/servicios02.jpg}"  style="max-height:350px; max-width:350px;"/>
 	</div>
 	<div class="col-sm-4">
 		<img alt="Servicios motos tiburón 3"
-			data-th-src="@{/images/servicios/servicios03.jpg}" />
+			data-th-src="@{/images/servicios/servicios03.jpg}"  style="max-height:400px; max-width:350px;"/>
 	</div>
 </div>
