--- a/Software/Codigo/src/main/resources/templates/index.html
+++ b/Software/Codigo/src/main/resources/templates/index.html
@@ -2,6 +2,29 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+<title>TIBURÓN :: Transporte de Motos</title>
+<meta name="title" content="TIBURÓN :: Transporte de Motos"></meta>
+<meta name="DC.Title" content="TIBURÓN :: Transporte de Motos"></meta>
+<meta http-equiv="title" content="TIBURÓN :: Transporte de Motos"></meta>
+<meta name="keywords" content="transpote, motos, asistencia, traslados, concesionarios, itv, moto-grua, quads, bikes, piaggio, peugeot, ducati, kasasaki, honda, yamaha, suzuki, polaris, bombardier, harley"></meta>
+<meta name="description" content="Tiburon Transporte de Motos, especialistas en motos y quads, servicio de moto-grua, pasamos la ITV, talleres concertados, transportes especializados a toda españa. Recogemos en deposito municipal con una experiencia de más de 15 años en el sector."></meta>
+<meta name="author" content="Motos tiburón"></meta>
+<meta name="DC.Creator" content="Motos tiburón"></meta>
+<link rev="made" href="mailto:noreply.motostiburon@gmail.com"/>
+<meta http-equiv="keywords" content="transpote, motos, asistencia, traslados, concesionarios, itv, moto-grua, quads, bikes, piaggio, peugeot, ducati, kasasaki, honda, yamaha, suzuki, polaris, bombardier, harley"></meta>
+<meta http-equiv="description" content="Tiburon Transporte de Motos, especialistas en motos y quads, servicio de moto-grua, pasamos la ITV, talleres concertados, transportes especializados a toda españa. Recogemos en deposito municipal con una experiencia de más de 15 años en el sector."></meta>
+<meta http-equiv="DC.Description" content="Tiburon Transporte de Motos, especialistas en motos y quads, servicio de moto-grua, pasamos la ITV, talleres concertados, transportes especializados a toda españa. Recogemos en deposito municipal con una experiencia de más de 15 años en el sector."></meta>
+<meta name="VW96.objecttype" content="Homepage "></meta>
+<meta name="DC.Language" scheme="RFC1766" content="Spanish"></meta>
+<meta name="distribution" content="global"></meta>
+<meta name="resource-type" content="document"></meta>
+<meta http-equiv="Pragma" content="no-cache"></meta>
+<meta name="Revisit" content="30 days"></meta>
+<meta name="robots" content="all"></meta>
+
+
+
+
 <meta charset="utf-8" />
 <!-- Necesario para que reconozca todo en internet explorer -->
 <meta http-equiv="X-UA-Compatible" content="IE=11" />
@@ -11,10 +34,6 @@
 
 <!-- Codificación necesaria para que sea aceptado por todos los dispositivos gracias a bootstrap -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-
-<title>Motos tiburón</title>
-
 
 <link rel="icon" data-th-href="@{/images/logo/logo_tib.ico}"></link>
 
