[1.0.0] Angular revisión vistas
- Pendiente controlador de envío de emails.

--- a/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/contacto.html
+++ b/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/contacto.html
@@ -1,4 +1,4 @@
-<div data-th-fragment="fragment">
+<div>
 	<div class="col-sm-12" style="text-align: left;">
 
 		<form id="formulario" class="empty"
