--- a/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/empresa.html
+++ b/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/empresa.html
@@ -1,4 +1,4 @@
-<div data-th-fragment="fragment">
+<div>
 	<div class="col-sm-12" style="text-align: center;">
 
 		<div class="col-sm-6 text-justify">
@@ -18,12 +18,12 @@
 		</div>
 		<div class="col-sm-6">
 			<img class="hidden-sm hidden-xs" alt="Furgonentas motos tiburón 1"
-				data-th-src="@{/images/empresa/furgonetas01.jpg}"
+				src="/static/images/empresa/furgonetas01.jpg"
 				style="max-height: 350px; min-width: 350px;" /> 
 				
 				<img
 				class="visible-sm visible-xs" alt="Furgonentas motos tiburón 1"
-				data-th-src="@{/images/empresa/furgonetas01.jpg}"
+				src="/static/images/empresa/furgonetas01.jpg"
 				style="max-height: 240px; min-width: 240px;" />
 		</div>
 
@@ -31,11 +31,11 @@
 	<div class="col-sm-12" style="text-align: center;">
 		<div class="col-sm-6">
 			<img class="hidden-sm hidden-xs" alt="Furgonentas motos tiburón 2"
-				data-th-src="@{/images/empresa/furgonetas02.jpg}"
+				src="/static/images/empresa/furgonetas02.jpg"
 				style="max-height: 350px; min-width: 350px;" />
 				
-				<img class="visible-sm visible-xs"  alt="Furgonentas motos tiburón 2"
-				data-th-src="@{/images/empresa/furgonetas02.jpg}"
+				<img class="visible-sm visible-xs" alt="Furgonentas motos tiburón 2"
+				src="/static/images/empresa/furgonetas02.jpg"
 				style="max-height:  240px; min-width: 240px;" />
 		</div>
 
