--- a/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/servicios.html
+++ b/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/servicios.html
@@ -1,4 +1,4 @@
-<div data-th-fragment="fragment">
+<div>
 	<div class="col-sm-12 text-justify">
 
 		<p>Tiburón transporte de motos, presta sus servicios tanto a
@@ -20,14 +20,14 @@
 
 	<div class="col-sm-4">
 		<img alt="Servicios motos tiburón 1"
-			data-th-src="@{/images/servicios/servicios01.jpg}" style="max-height:350px; max-width:350px;" />
+			src="/static/images/servicios/servicios01.jpg" style="max-height:350px; max-width:350px;" />
 	</div>
 	<div class="col-sm-4">
 		<img alt="Servicios motos tiburón 2"
-			data-th-src="@{/images/servicios/servicios02.jpg}"  style="max-height:350px; max-width:350px;"/>
+			src="/static/images/servicios/servicios02.jpg"  style="max-height:350px; max-width:350px;"/>
 	</div>
 	<div class="col-sm-4">
 		<img alt="Servicios motos tiburón 3"
-			data-th-src="@{/images/servicios/servicios03.jpg}"  style="max-height:400px; max-width:350px;"/>
+			src="/static/images/servicios/servicios03.jpg"  style="max-height:400px; max-width:350px;"/>
 	</div>
 </div>
