--- a/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/contacto.html
+++ b/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/contacto.html
@@ -1,4 +1,4 @@
-<div>
+<div data-ng-controller="contactoCtrl">
 	<div class="col-sm-12" style="text-align: left;">
 
 		<form id="formulario" class="empty"
