--- a/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/empresa.html
+++ b/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/empresa.html
@@ -1,4 +1,4 @@
-<div>
+<div data-ng-controller="empresaCtrl">
 	<div class="col-sm-12" style="text-align: center;">
 
 		<div class="col-sm-6 text-justify">
