--- a/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/servicios.html
+++ b/Software/Codigo.v.1.0.0/htdocs/templates/1.0.0/views/home/servicios.html
@@ -1,4 +1,4 @@
-<div>
+<div data-ng-controller="serviciosCtrl">
 	<div class="col-sm-12 text-justify">
 
 		<p>Tiburón transporte de motos, presta sus servicios tanto a
